--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="./style.css">
+  <link href="https://fonts.cdnfonts.com/css/uber-move-text" rel="stylesheet">
+                
 
   <title>PROJECT-UBER-copy</title>
-  
+
 </head>
 <body>
-  
+  <h1>Uber Movie</h1>
+  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi doloribus earum beatae eligendi rem iure aliquam autem, voluptates optio aperiam!
+  </p>
 </body>
 </html>
