added blosks: nav, wrapper. html

--- a/index.html
+++ b/index.html
@@ -7,13 +7,56 @@
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link href="https://fonts.cdnfonts.com/css/uber-move-text" rel="stylesheet">
                 
-
   <title>PROJECT-UBER-copy</title>
 
 </head>
+
 <body>
-  <h1>Uber Movie</h1>
-  <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nisi doloribus earum beatae eligendi rem iure aliquam autem, voluptates optio aperiam!
-  </p>
+  <div class="root">
+    <main>
+      <nav class="nav-bar">
+        <ul class="nav-bar__logo">
+          <li><a href="https://www.uber.com/nl/en/">Uber</a></li>
+        </ul>
+        <ul class="nav-bar__support">
+          <li><button class="nav-bar_btn"><a href="#">Company</a></button></li>
+          <li><button class="nav-bar_btn"><a href="#">Safety</a></button></li>
+          <li><button class="nav-bar_btn"><a href="#">Help</a></button></li>
+        </ul>
+        <ul class="nav-bar__usermenu">
+            <li><button class="nav-bar_btn"><a href="#">EN</a></button></li>
+            <li><button class="nav-bar_btn"><a href="#">Products</a></button></li>
+            <li><button class="nav-bar_btn"><a href="#">Log in</a></button></li>
+            <li><button class="nav-bar_btn"><a href="#">Sign up</a></button></li>
+        </ul>
+      </nav>
+      <div class="wrapper">
+        <section class="wrapper-block">
+          <div class="wrapper-block__nav">
+            <ul>
+              <li><a href="">Drive or deliver</a>
+              <img src="" alt="Drive or deliver">
+            </li>
+            <li><a href="">Eat</a>
+              <img src="" alt="Eat">
+            </li>
+            <li><a href="">Ride</a>
+              <img src="" alt="Ride">
+            </li>
+            </ul>
+          </div>
+          <div class="wrapper-block__body">
+            <h1 class="wrapper-block__titel">Get in the driver's seat and get past</h1>
+            <p class="wrapper-block__subtitle">drive on the platform with the largest network of active riders.</p>
+          </div>
+          <div class="wrapper-block__footer">
+            <button class="body__button"><a href="Sign up to drive"></a></button>
+            <a class="body__links" href="#">Learn more about driving and delivering</a>
+          </div>
+        </section>
+      </div>
+    </main>
+  </div>
 </body>
+
 </html>
