added 3containers and footer. html

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             </ul>
           </div>
           <div class="wrapper-block__body">
-            <h1 class="wrapper-block__titel">Get in the driver's seat and get past</h1>
-            <p class="wrapper-block__subtitle">drive on the platform with the largest network of active riders.</p>
+            <h1 class="h1 wrapper-block__title">Get in the driver's seat and get past</h1>
+            <p class="p wrapper-block__subtitle">drive on the platform with the largest network of active riders.</p>
           </div>
           <div class="wrapper-block__footer">
             <button class="body__button"><a href="Sign up to drive"></a></button>
@@ -55,6 +55,75 @@
           </div>
         </section>
       </div>
+      <div class="container-business">
+        <section class="container-business-block">
+          <div class="container-business-block__body">
+            <h2 class="h2 container-business__title">Uber for Business</h2>
+          <p class="p container-business__subtitle">Transform the way your company moves and feeds its people.</p>
+          <button class="body__button"><a href="#">See how</a></button>
+          </div>
+        </section>
+        </div>
+        <div class="container-focused">
+          <section class="container-focused-block">
+              <div class="container-focused-block__header">
+                <h2 class="h2 container-focused__titel">Focused on safety, wherever you go</h2>
+              </div>
+              <div class="container-focused-block__body">
+                <div class="container-focused__safety">
+                  <img src="" alt="" class="images">
+                  <h3 class="h3 container-focused__titel">Our commitment to your safety</h3>
+                  <p class="p container-focused__text">With every safety feature and every standard in our Community Guidelines, we're committed to helping to create a safe environment for our users.</p>
+                  <ul class="container-focused__links">
+                    <li>
+                      <a class="body__links" href="#">Read about our Community Guidelines</a>
+                    </li>
+                    <li>
+                      <a class="body__links" href="#">See all safety features</a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="container-focused__places">
+                  <img src="" alt="" class="images">
+                  <h3 class="h3 container-focused__titel">Setting 10,000+ cities in motion</h3>
+                  <p class="p container-focused__text">The app is available in thousands of cities worldwide, so you can request a ride even when you’re far from home.</p>
+                  <ul class="container-focused__links">
+                    <li><a class="body__links" href="#">View all cities</a>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+          </section>
+        </div>
+        <div class="container-news">
+          <section class="container-news-block">
+            <div class="news-block__item1">
+              <img src="" alt="">
+              <h3 class="h3 container-news__titel">About us</h3>
+              <p class="p container-news__text">Find out how we started, what drives us, and how we’re reimagining how the world moves.</p>
+              <ul class="container-new__links">
+                <li><a class="body__links" href="#">Learn more about Uber</a></li>
+              </ul>
+            </div>
+            <div class="news-block__item2">
+              <img src="" alt="">
+              <h3 class="h3 container-news__titel">Newsroom</h3>
+              <p class="p container-news__text">See announcements about our latest releases, initiatives, and partnerships.</p>
+              <ul class="container-new__links">
+                <li><a class="body__links" href="#">Go to Newsroom</a></li>
+              </ul>
+            </div>
+            <div class="news-block__item3">
+              <img src="" alt="">
+              <h3 class="h3 container-news__titel">Global citizenship</h3>
+              <p class="p container-news__text">Read about our commitment to making a positive impact in the cities we serve.</p>
+              <ul class="container-new__links">
+                <li><a class="body__links" href="#">See our partnerships</a></li>
+              </ul>
+            </div>
+          </section>
+        </div>
+        <footer></footer>
     </main>
   </div>
 </body>
