added gaps in html and crazy css

--- a/index.html
+++ b/index.html
@@ -18,11 +18,13 @@
         <ul class="nav-bar__logo">
           <li><a href="https://www.uber.com/nl/en/">Uber</a></li>
         </ul>
+
         <ul class="nav-bar__support">
-          <li><button class="nav-bar_btn"><a href="#">Company</a></button></li>
-          <li><button class="nav-bar_btn"><a href="#">Safety</a></button></li>
-          <li><button class="nav-bar_btn"><a href="#">Help</a></button></li>
+          <li class="nav-bar_btn"><a href="#">Company</a></li>
+          <li class="nav-bar_btn"><a href="#">Safety</a></li>
+          <li class="nav-bar_btn"><a href="#">Help</a></li>
         </ul>
+
         <ul class="nav-bar__usermenu">
             <li><button class="nav-bar_btn"><a href="#">EN</a></button></li>
             <li><button class="nav-bar_btn"><a href="#">Products</a></button></li>
@@ -30,45 +32,56 @@
             <li><button class="nav-bar_btn"><a href="#">Sign up</a></button></li>
         </ul>
       </nav>
+
+
       <div class="wrapper">
         <section class="wrapper-block">
+
           <div class="wrapper-block__nav">
             <ul>
-              <li><a href="">Drive or deliver</a>
-              <img src="" alt="Drive or deliver">
+              <li><img src="https://www.uber-assets.com/image/upload/v1558389718/assets/8e/33c8c0-f7e9-467c-924b-c70232943a47/original/Earn-filled.svg" alt="Drive or deliver">
+                <a href="">Drive or deliver</a>
             </li>
-            <li><a href="">Eat</a>
-              <img src="" alt="Eat">
+            <li><img src="https://www.uber-assets.com/image/upload/v1542256606/assets/7d/5a4852-3b2a-4466-96de-602dfb62dc1b/original/restaurant-outlined.svg" alt="Eat">
+              <a href="">Eat</a>
             </li>
-            <li><a href="">Ride</a>
-              <img src="" alt="Ride">
+            <li><img src="https://www.uber-assets.com/image/upload/v1542252540/assets/6d/87af17-3970-4d01-8936-1b0ba102ea6e/original/car-front-outlined.svg" alt="Ride">
+              <a href="">Ride</a>
             </li>
             </ul>
           </div>
+
           <div class="wrapper-block__body">
             <h1 class="h1 wrapper-block__title">Get in the driver's seat and get past</h1>
             <p class="p wrapper-block__subtitle">drive on the platform with the largest network of active riders.</p>
           </div>
+
           <div class="wrapper-block__footer">
             <button class="body__button"><a href="Sign up to drive"></a></button>
             <a class="body__links" href="#">Learn more about driving and delivering</a>
           </div>
         </section>
       </div>
+
       <div class="container-business">
         <section class="container-business-block">
+
           <div class="container-business-block__body">
             <h2 class="h2 container-business__title">Uber for Business</h2>
           <p class="p container-business__subtitle">Transform the way your company moves and feeds its people.</p>
           <button class="body__button"><a href="#">See how</a></button>
           </div>
+
         </section>
         </div>
+
         <div class="container-focused">
           <section class="container-focused-block">
+
               <div class="container-focused-block__header">
                 <h2 class="h2 container-focused__titel">Focused on safety, wherever you go</h2>
               </div>
+
               <div class="container-focused-block__body">
                 <div class="container-focused__safety">
                   <img src="" alt="" class="images">
@@ -83,6 +96,7 @@
                     </li>
                   </ul>
                 </div>
+
                 <div class="container-focused__places">
                   <img src="" alt="" class="images">
                   <h3 class="h3 container-focused__titel">Setting 10,000+ cities in motion</h3>
@@ -92,29 +106,34 @@
                     </li>
                   </ul>
                 </div>
+
               </div>
           </section>
         </div>
+
         <div class="container-news">
           <section class="container-news-block">
+
             <div class="news-block__item1">
-              <img src="" alt="">
+              <img src="https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_24,h_24/v1542256135/assets/dd/c53d7b-8921-4dc7-93f4-45fb59f4ffb9/original/person-multiple-outlined.svg" alt="about us">
               <h3 class="h3 container-news__titel">About us</h3>
               <p class="p container-news__text">Find out how we started, what drives us, and how we’re reimagining how the world moves.</p>
               <ul class="container-new__links">
                 <li><a class="body__links" href="#">Learn more about Uber</a></li>
               </ul>
             </div>
+
             <div class="news-block__item2">
-              <img src="" alt="">
+              <img src="https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_24,h_24/v1542254244/assets/eb/68c631-5041-4eeb-9114-80048a326782/original/document-outlined.svg" alt="document_outlined">
               <h3 class="h3 container-news__titel">Newsroom</h3>
               <p class="p container-news__text">See announcements about our latest releases, initiatives, and partnerships.</p>
               <ul class="container-new__links">
                 <li><a class="body__links" href="#">Go to Newsroom</a></li>
               </ul>
             </div>
+
             <div class="news-block__item3">
-              <img src="" alt="">
+              <img src="https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_24,h_24/v1542255370/assets/64/58118a-0ece-4f80-93ee-8041b53593d5/original/home-outlined.svg" alt="citizen">
               <h3 class="h3 container-news__titel">Global citizenship</h3>
               <p class="p container-news__text">Read about our commitment to making a positive impact in the cities we serve.</p>
               <ul class="container-new__links">
@@ -123,6 +142,7 @@
             </div>
           </section>
         </div>
+
         <footer></footer>
     </main>
   </div>
