rewrite all structure, made new nav

--- a/index.html
+++ b/index.html
@@ -12,7 +12,59 @@
 </head>
 
 <body>
-  <div class="root">
+
+<div class="app">
+
+  <nav class="nav-bar">
+    <div class="nav-bar__logo">
+      <a class="logo-link" href="#">Uber</a>
+    </div>
+    <div class="nav-bar__left">
+      <ul class="nav-bar-list__left">
+        <li class=""><a href="#">Company</a></li>
+        <li class=""><a href="#">Safety</a></li>
+        <li class=""><a href="#">Help</a></li>
+      </ul>
+    </div>
+    <div class="nav-bar__right">
+      <ul class="nav-bar-list__right">
+      <li class=""><a href="#">EN</a></li>
+      <li class=""><a href="#">Products</a></li>
+      <li class=""><a href="#">Log in</a></li>
+      <button class="nav__button">Sign up</button>
+      </ul>
+    </div>
+  </nav>
+
+
+
+
+
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ <!-- <div class="root">
     <main>
       <nav class="nav-bar">
         <ul class="nav-bar__logo">
@@ -145,7 +197,7 @@
 
         <footer></footer>
     </main>
-  </div>
+  </div> -->
 </body>
 
 </html>
