navbar+@media finished

--- a/index.html
+++ b/index.html
@@ -28,10 +28,15 @@
     </div>
     <div class="nav-bar__right">
       <ul class="nav-bar-list__right">
-      <li class=""><a href="#">EN</a></li>
-      <li class=""><a href="#">Products</a></li>
-      <li class=""><a href="#">Log in</a></li>
-      <button class="nav__button">Sign up</button>
+        <div class="products">
+          <li class=""><a href="#">EN</a></li>
+          <li class=""><a href="#">Products</a></li>
+        </div>
+        <div class="login-menu">
+          <li class=""><a href="#">Log in</a></li>
+          <button class="nav__button">Sign up</button>
+        </div>
+        
       </ul>
     </div>
   </nav>
