--- a/index.html
+++ b/index.html
@@ -40,6 +40,42 @@
       </ul>
     </div>
   </nav>
+
+  <section class="driver">
+    <div class="block-driver">
+      <div class="driver__header">
+        <ul class="driver-nav">
+          <li><img src="https://www.uber-assets.com/image/upload/v1558389718/assets/8e/33c8c0-f7e9-467c-924b-c70232943a47/original/Earn-filled.svg" alt="Drive or deliver">
+            <a href="">Drive or deliver</a>
+        </li>
+        <li><img src="https://www.uber-assets.com/image/upload/v1542256606/assets/7d/5a4852-3b2a-4466-96de-602dfb62dc1b/original/restaurant-outlined.svg" alt="Eat">
+          <a href="">Eat</a>
+        </li>
+        <li><img src="https://www.uber-assets.com/image/upload/v1542252540/assets/6d/87af17-3970-4d01-8936-1b0ba102ea6e/original/car-front-outlined.svg" alt="Ride">
+          <a href="">Ride</a>
+        </ul>
+      </div>
+      <div class="driver__body">
+        <h1>Get in the driver’s seat and get paid</h1>
+        <p>Drive on the platform with the largest network of active riders.</p>
+        <button>Sign up to drive</button>
+      </div>
+      <div class="driver__footer">
+        <a href="#">Learn more about driving and delivering</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="focused"></section>
+
+  <section class="newsroom"></section>
+
+  <section class="apps"></section>
+
+  <footer></footer>
+
+
+
 <!---- 
    <div class="background">
     <div class="hero">
