width 80%, section neewsroom and focused

--- a/index.html
+++ b/index.html
@@ -42,33 +42,73 @@
   </nav>
 
   <section class="driver">
-    <div class="block-driver">
-      <div class="driver__header">
-        <ul class="driver-nav">
-          <li><img src="https://www.uber-assets.com/image/upload/v1558389718/assets/8e/33c8c0-f7e9-467c-924b-c70232943a47/original/Earn-filled.svg" alt="Drive or deliver">
-            <a href="">Drive or deliver</a>
-        </li>
-        <li><img src="https://www.uber-assets.com/image/upload/v1542256606/assets/7d/5a4852-3b2a-4466-96de-602dfb62dc1b/original/restaurant-outlined.svg" alt="Eat">
-          <a href="">Eat</a>
-        </li>
-        <li><img src="https://www.uber-assets.com/image/upload/v1542252540/assets/6d/87af17-3970-4d01-8936-1b0ba102ea6e/original/car-front-outlined.svg" alt="Ride">
-          <a href="">Ride</a>
-        </ul>
-      </div>
-      <div class="driver__body">
-        <h1>Get in the driver’s seat and get paid</h1>
-        <p>Drive on the platform with the largest network of active riders.</p>
-        <button>Sign up to drive</button>
-      </div>
-      <div class="driver__footer">
-        <a href="#">Learn more about driving and delivering</a>
+    <div class="wrapper__driver">
+      <div class="block-driver">
+        <div class="driver__header">
+          <ul class="driver-nav">
+            <li><img src="https://www.uber-assets.com/image/upload/v1558389718/assets/8e/33c8c0-f7e9-467c-924b-c70232943a47/original/Earn-filled.svg" alt="Drive or deliver">
+              <a href="">Drive <br> or deliver</a>
+          </li>
+          <li><img src="https://www.uber-assets.com/image/upload/v1542256606/assets/7d/5a4852-3b2a-4466-96de-602dfb62dc1b/original/restaurant-outlined.svg" alt="Eat">
+            <a href="">Eat</a>
+          </li>
+          <li><img src="https://www.uber-assets.com/image/upload/v1542252540/assets/6d/87af17-3970-4d01-8936-1b0ba102ea6e/original/car-front-outlined.svg" alt="Ride">
+            <a href="">Ride</a>
+          </ul>
+        </div>
+        <div class="driver__body">
+          <h1>Get in the driver’s seat and get paid</h1>
+          <p>Drive on the platform with the largest network of active riders.</p>
+          <button>Sign up to drive</button>
+        </div>
+        <div class="driver__footer">
+          <a href="#">Learn more about driving and delivering</a>
+        </div>
       </div>
     </div>
   </section>
 
-  <section class="focused"></section>
+  <section class="focused">
+    <h1>Focused on safety, wherever you go</h1>
+    <div class="focused-container">
+      <div class="focused-block__item">
+        <img src="https://www.uber-assets.com/image/upload/f_auto,q_auto:eco,c_fill,w_415,h_276/v1613520218/assets/3e/e98625-31e6-4536-8646-976a1ee3f210/original/Safety_Home_Img2x.png" alt="safety">
+        <h3>Our commitment to your safety</h3>
+        <p>With every safety feature and every standard in our Community Guidelines, we're committed to helping to create a safe environment for our users.</p>
+        <a href="#">Read about our Community Guidelines</a>
+        <a href="#">See all safety features</a>
+      </div>
+      <div class="focused-block__item">
+        <img src="https://www.uber-assets.com/image/upload/f_auto,q_auto:eco,c_fill,w_415,h_276/v1613520285/assets/c2/91ea9c-90d7-4c36-a740-d7844536694e/original/Cities_Home_Img2x.png" alt="setting">
+        <h3>Setting 10,000+ cities in motion</h3>
+        <p>The app is available in thousands of cities worldwide, so you can request a ride even when you’re far from home.</p>
+        <a href="#">View all cities</a>
+      </div>
+    </div>
+  </section>
 
-  <section class="newsroom"></section>
+  <section class="newsroom">
+    <div class="newsroom-container">
+      <div class="newsroom-block__item">
+        <img src="https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_24,h_24/v1542256135/assets/dd/c53d7b-8921-4dc7-93f4-45fb59f4ffb9/original/person-multiple-outlined.svg" alt="about">
+        <h3>About us</h3>
+        <p>Find out how we started, what drives us, and how we’re reimagining how the world moves.</p>
+        <a href="#">Learn more about Uber</a>
+      </div>
+      <div class="newsroom-block__item">
+        <img src="https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_24,h_24/v1542254244/assets/eb/68c631-5041-4eeb-9114-80048a326782/original/document-outlined.svg" alt="neews">
+        <h3>Neewsroom</h3>
+        <p>See announcements about our latest releases, initiatives, and partnerships.</p>
+        <a href="#">Go to Newsroom</a>
+      </div>
+      <div class="newsroom-block__item">
+        <img src="https://www.uber-assets.com/image/upload/q_auto:eco,c_fill,w_24,h_24/v1542255370/assets/64/58118a-0ece-4f80-93ee-8041b53593d5/original/home-outlined.svg" alt="global">
+        <h3>Global citizenship</h3>
+        <p>Read about our commitment to making a positive impact in the cities we serve.</p>
+        <a href="#">See our partnerships</a>
+      </div>
+    </div>
+  </section>
 
   <section class="apps"></section>
 
