--- a/index.html
+++ b/index.html
@@ -16,28 +16,31 @@
 <div class="app">
 
   <nav class="nav-bar">
-    <div class="nav-bar__logo">
-      <a class="logo-link" href="#">Uber</a>
-    </div>
-    <div class="nav-bar__left">
-      <ul class="nav-bar-list__left">
-        <li class=""><a href="#">Company</a></li>
-        <li class=""><a href="#">Safety</a></li>
-        <li class=""><a href="#">Help</a></li>
-      </ul>
-    </div>
-    <div class="nav-bar__right">
-      <ul class="nav-bar-list__right">
-        <div class="products">
-          <li class=""><a href="#">EN</a></li>
-          <li class=""><a href="#">Products</a></li>
+    <div class="nav-bar__container">
+      <div class="nav-bar__wrapper">
+        <div class="nav-bar__logo">
+          <a class="logo-link" href="#">Uber</a>
         </div>
-        <div class="login-menu">
-          <li class=""><a href="#">Log in</a></li>
-          <button class="nav__button">Sign up</button>
+        <div class="nav-bar__left">
+          <ul class="nav-bar-list__left">
+            <li class=""><a href="#">Company</a></li>
+            <li class=""><a href="#">Safety</a></li>
+            <li class=""><a href="#">Help</a></li>
+          </ul>
         </div>
-        
-      </ul>
+        <div class="nav-bar__right">
+          <ul class="nav-bar-list__right">
+            <div class="products">
+              <li class=""><a href="#">EN</a></li>
+              <li class=""><a href="#">Products</a></li>
+            </div>
+            <div class="login-menu">
+              <li class=""><a href="#">Log in</a></li>
+              <button class="nav__button">Sign up</button>
+            </div>
+          </ul>
+        </div>
+      </div>
     </div>
   </nav>
 
@@ -109,14 +112,12 @@
       </div>
     </div>
   </section>
-
-  <section class="apps"></section>
-
+  
   <section class="footer">
     <div class="footer-wrapper">
       <div class="footer-container">
         <div class="footer-container__logo">
-          <a href="#">Uber</a>
+          <a href="#" class="footer-logo">Uber</a>
           <a href="#">Visit Help Center</a>
         </div>
         <div class="footer-container__links">
@@ -170,8 +171,8 @@
           </div>
           <div class="social-right">
             <ul>
-              <li><img src="#" alt="">English</li>
-              <li><img src="#" alt="">Amsterdam</li>
+              <li><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><title>Globe</title><path d="M12 1C5.9 1 1 5.9 1 12s4.9 11 11 11 11-4.9 11-11S18.1 1 12 1zm8 11c0 .7-.1 1.4-.3 2-.6-1.5-1.6-3.1-3-4.7l1.8-1.8c1 1.3 1.5 2.8 1.5 4.5zM6.5 6.5c1.3 0 3.6.8 6 2.9l-3.2 3.2C7.1 9.8 6.5 7.5 6.5 6.5zm8.1 5c2.3 2.7 2.9 5 2.9 6-1.3 0-3.6-.8-6-2.9l3.1-3.1zm1.9-6.1l-1.9 1.9c-1.6-1.4-3.2-2.4-4.7-3 .7-.2 1.3-.3 2-.3 1.8 0 3.3.5 4.6 1.4zM4 12c0-.7.1-1.4.3-2 .6 1.5 1.6 3.1 3 4.7l-1.8 1.8C4.5 15.2 4 13.7 4 12zm3.5 6.6l1.9-1.9c1.6 1.4 3.2 2.4 4.7 3-.7.2-1.3.3-2 .3-1.8 0-3.3-.5-4.6-1.4z" fill="currentColor"></path></svg>English</li>
+              <li><svg width="16" height="16" viewBox="0 0 24 24" fill="none"><title>Location marker</title><path d="M18.7 3.8C15 .1 9 .1 5.3 3.8c-3.7 3.7-3.7 9.8 0 13.5L12 24l6.7-6.8c3.7-3.6 3.7-9.7 0-13.4zM12 12.5c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2z" fill="currentColor"></path></svg>Amsterdam</li>
             </ul>
           </div>
         </div>
